--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Job Applications</title>
 </head>
 <body>
-    <h1>Job Applications</h1>
+    <h1>Job Applications Coming Soon</h1>
 
     <!-- Display Data Here -->
     <ul id="jobList"></ul>
